--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,18 @@
   "name": "Ajay Vishwakarma Portfolio Website",
   "icons": [
     {
-      "src": "logo512.png",
+      "src": "logo512.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
+      "src": "logo512.ico",
+      "type": "image/icon",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
+      "src": "logo512.ico",
+      "type": "image/icon",
       "sizes": "512x512"
     }
   ],
