--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "portfolio-website",
-  "homepage": "https://jackparsonss.github.io/",
+  "name": "Ajay_portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
